<resources>
    <string name="app_name">Findit</string>
    <string name="current_location_title">Your current Location:</string>
    <string name="location_icon">Location icon</string>
    <string name="find_nearby_location">Find nearby places</string>
    <string name="filter_by">Filter by:</string>
    <string name="expand_dropdown">Expand dropdown list</string>
    <string name="place_image">Place image</string>
    <string name="places_loading">Loading images</string>
    <string name="please_wait_message">Please wait..</string>
    <string-array name="category_array">
        <item>Select category</item>
        <item>Restaurant</item>
        <item>Health</item>
        <item>Airport</item>
        <item>Library</item>
        <item>Gym</item>
        <item>Bakery</item>
        <item>Airport</item>
        <item>Doctor</item>
        <item>School</item>
        <item>Bank</item>
        <item>Bar</item>
        <item>Mall</item>
        <item>University</item>
    </string-array>
    <string name="title_activity_place_detail">PlaceDetailActivity</string>
    <string name="photos_around">Photos around your area</string>
    <string name="image_details">More details about the place</string>
    <string name="place_open">Open now</string>
    <string name="place_rating">Rating</string>
    <string name="place_category">Category</string>
    <string name="place_name">Place name</string>
    <string name="no_results_found">No results found</string>
    <string name="api_call_limit">You reached API calls limit</string>
    <string name="request_denied">Request denied</string>
    <string name="unknown_error">Server is not responding</string>
    <string name="inavalid_request">Invalid parameter provided</string>
</resources>
