<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_top_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_4dp"
            android:background="#ECEFF1"
            android:elevation="@dimen/dimen_4dp">

            <TextView
                android:id="@+id/tv_current_location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/current_location_title"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:contentDescription="@string/location_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_current_location_title"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/tv_current_location_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/dimen_16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Midrand" />

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_4dp"
            android:background="#ECEFF1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_find_places"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/filter_by"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/dimen_16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_4dp"
                android:background="@drawable/spinner_background"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/categories_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/dimen_4dp"
                    android:background="@android:color/transparent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    android:contentDescription="@string/expand_dropdown"
                    app:srcCompat="@drawable/ic_expand" />

            </RelativeLayout>


            <Button
                android:id="@+id/btn_find_nearby_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_4dp"
                android:background="@drawable/button_border"
                android:paddingEnd="@dimen/dimen_16dp"
                android:paddingStart="@dimen/dimen_16dp"
                android:text="@string/find_nearby_location" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_nearby_places"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_4dp"
                tools:listitem="@layout/places_row" />
        </LinearLayout>

    </LinearLayout>
</layout>